# grokingclawid

./: .gitignore  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/grokingclaw-daemon/: Cargo.toml
crates/grokingclaw-daemon/src/: a2a.rs  anchor.rs  birth.rs  config.rs  daemon.rs  ipc.rs  main.rs  mesh.rs  oauth_flow.rs  oauth_store.rs  supervisor.rs  templates.rs  updates.rs
crates/grokingclaw-proxy/: Cargo.toml
crates/grokingclaw-proxy/src/: audit.rs  lib.rs  oauth.rs  scope.rs  server.rs  signer.rs
crates/grokingclawid-cli/: Cargo.toml
crates/grokingclawid-cli/src/: main.rs
crates/grokingclawid-cli/src/commands/: audit.rs  challenge.rs  delegate.rs  export.rs  guard.rs  issue.rs  license.rs  mod.rs  oauth.rs  revoke.rs  rotate.rs  sign.rs  verify.rs  wallet.rs
crates/grokingclawid-cli/tests/: integration_tests.rs
crates/grokingclawid-core/: Cargo.toml
crates/grokingclawid-core/src/: audit.rs  challenge.rs  crypto.rs  httpsig.rs  iota.rs  lib.rs  license.rs  models.rs  revocation.rs  ws.rs
daemon-phase-a/: Cargo.toml  config.rs  daemon.rs  ipc.rs  main.rs  supervisor.rs
docs/: NCCOE-REFERENCE-GUIDE.md
examples/: run-lab.sh
examples/hello-agent/: agent.py  health.sh  install.sh  manifest.toml  run.sh
mcp-server/: README.md  index.js  package.json  test.js
scripts/: pre-commit  safety-check.sh
src/: challenge.rs  httpsig.rs  iota.rs  main.rs
src/commands/: audit.rs  challenge.rs  delegate.rs  export.rs  issue.rs  mod.rs  sign.rs  verify.rs  wallet.rs
