[package]
name = "grokingclaw-daemon"
version = "0.1.0"
edition = "2021"
authors = ["GrokingClaw Labs <huynguyenusa@icloud.com>"]
description = "GrokingClaw Daemon — AI Agent Host"
license = "Apache-2.0"

[[bin]]
name = "grokingclaw"
path = "src/main.rs"

[dependencies]
# Core library (shared crypto, models, audit)
grokingclawid-core = { path = "../grokingclawid-core" }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.2", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "process", "signal"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Utilities
anyhow = "1.0"
dirs = "5.0"
libc = "0.2"
