[package]
name = "grokingclaw-daemon"
version = "0.4.1"
edition = "2021"
authors = ["GrokingClaw Labs <contact@grokingclaw.com>"]
description = "GrokingClaw Daemon — AI Agent Host"
license = "Apache-2.0"

[[bin]]
name = "grokingclaw"
path = "src/main.rs"

[dependencies]
# Core library (shared crypto, models, audit)
grokingclawid-core = { path = "../grokingclawid-core", features = ["wallet"] }

# Sidecar proxy (scope enforcement, identity signing)
grokingclaw-proxy = { path = "../grokingclaw-proxy" }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.2", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "process", "signal", "sync"] }

# HTTP client (mesh + registry communication)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# HTTP server (A2A protocol endpoint)
hyper = { version = "1.6", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Crypto (for signing key type)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"

# Database (for anchor state)
rusqlite = { version = "0.31", features = ["bundled"] }

# System info
hostname = "0.4"

# OAuth token encryption
chacha20poly1305 = "0.10"
hkdf = "0.12"
getrandom = "0.2"
urlencoding = "2.1"

# Utilities
anyhow = "1.0"
dirs = "5.0"
libc = "0.2"

[dev-dependencies]
tempfile = "3.9"
